--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "@mdxeditor/editor": "^2.20.7",
     "@tailwindcss/typography": "^0.5.12"
   },
   "devDependencies": {
